# python-storybook

./: README.md  pyproject.toml
notebooks/: app.ipynb  main.py  practical_test.ipynb  rag.py  test.md  text.html
notebooks/legacy/: core.py  test.ipynb  test.py  test2.ipynb  utils.py
notebooks/legacy/autodocs/: auto_docs.py  auto_docs_templates.py  utils.py
notebooks/level2/: rag.py
notebooks/stories/: more_stories.py  rag.py
python/: pyproject.toml  requirements.txt
python/python_storybook/: core.py  main.py  utils.py
python/python_storybook/autodocs/: __init__.py  auto_docs.py  auto_docs_templates.py  utils.py
python/python_storybook/src/stories/: sample_stories.py  some_script.py
python/python_storybook/stories/: rag.py  sample_stories.py
pytotype/: mapping.py
storybook/: package.json
storybook-base/src/stories/: Example.tsx  PrettyStory.tsx  Python.tsx  python.d.ts
storybook/src/stories/: PythonStorybook.tsx  Welcome.stories.tsx
todo/: development.ipynb  organization.ipynb
